@@ -256,7 +256,7 @@ static DP_Player *make_player(DP_PlayerType type, char *recording_path,
                           index_path,
                           type,
                           reader,
-                          DP_acl_state_new(),
+                          DP_acl_state_new_playback(),
                           header_value,
                           0,
                           compatible,
@@ -1794,7 +1794,7 @@ bool DP_player_index_build(DP_Player *player, DP_DrawContext *dc,
     }
 
     DP_PERF_BEGIN_DETAIL(fn, "index_build", "path=%s", path);
-    DP_AclState *acls = DP_acl_state_new();
+    DP_AclState *acls = DP_acl_state_new_playback();
     DP_LocalState *ls = DP_local_state_new(NULL, NULL, NULL);
     DP_CanvasHistory *ch = DP_canvas_history_new(NULL, NULL, false, NULL);
     DP_BuildIndexContext c = {index_player,
